# AI-Assistant-Discord

./: Makefile  README.md  pyproject.toml
scripts/: bootstrap.sh
src/: ark_agent.py  asr_local.py  asr_realtime.py  commands_cog.py  discord_voice.py  main.py  memory.py  router.py  tts_realtime.py  vad.py
src/config/: campaign.yml  mapping.yml
src/discord_ark_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_memory.py  test_router.py
