[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-ark-bot"
version = "0.1.0"
description = "ARK-enabled Discord voice bot with OpenAI Realtime ASR/TTS"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ARK Bot" }]
dependencies = [
  "py-cord>=2.5.0",        # Provides discord (discord.py-compatible) + voice sinks
  "aiohttp>=3.9",
  "numpy>=1.26",
  "webrtcvad>=2.0.10",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "PyNaCl>=1.5.0",         # Required for Discord voice
  "audioop-lts>=0.2.1",    # Python 3.13 stdlib removal workaround
  "av>=12.0.0; platform_system != 'Darwin'",  # optional; we mostly use numpy simple downsample
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
